all root to leaf paths